@@ -3,12 +3,6 @@
 # undef _GNU_SOURCE
 #endif
 
-/* Define if your struct reg has r_fs.  */
-#undef HAVE_STRUCT_REG_R_FS
-
-/* Define if your struct reg has r_gs.  */
-#undef HAVE_STRUCT_REG_R_GS
-
 /* Define if pstatus_t type is available */
 #undef HAVE_PSTATUS_T
 
