@@ -4,12 +4,6 @@
 # undef _GNU_SOURCE
 #endif
 
-/* Define if your struct reg has r_fs.  */
-#undef HAVE_STRUCT_REG_R_FS
-
-/* Define if your struct reg has r_gs.  */
-#undef HAVE_STRUCT_REG_R_GS
-
 /* Define if pstatus_t type is available */
 #undef HAVE_PSTATUS_T
 
@@ -457,10 +451,16 @@
 /* Define to 1 if your system has struct reg in <machine/reg.h>. */
 #undef HAVE_STRUCT_REG
 
+/* Define to 1 if `r_fs' is member of `struct reg'. */
+#undef HAVE_STRUCT_REG_R_FS
+
+/* Define to 1 if `r_gs' is member of `struct reg'. */
+#undef HAVE_STRUCT_REG_R_GS
+
 /* Define to 1 if `st_blocks' is member of `struct stat'. */
 #undef HAVE_STRUCT_STAT_ST_BLOCKS
 
-/* Define to 1 if your system has td_pcb in struct thread. */
+/* Define to 1 if `td_pcb' is member of `struct thread'. */
 #undef HAVE_STRUCT_THREAD_TD_PCB
 
 /* Define to 1 if you have the `syscall' function. */
